packages/astro/e2e/fixtures/errors/src/components/JSSyntaxError.js
export default function Error() {
  const 1badvar = true;
  return 1badvar;
}
